--- a/index.html
+++ b/index.html
@@ -258,6 +258,15 @@
                             <p class="text-blue-300 text-xs">IT Hardware Manager</p>
                         </div>
                     </div>
+
+                    <!-- Team Member 5 -->
+                    <div class="group">
+                        <div class="backdrop-blur-md bg-white/10 rounded-2xl p-4 shadow-lg hover:shadow-xl transition-all duration-300">
+                            <img src="image/Abruquah.jpg" alt="Emmanuel Abraquah" class="w-full h-40 object-cover rounded-xl mb-4" onerror="this.onerror=null;this.src='https://placehold.co/160x160?text=Member+5';" loading="lazy">
+                            <h4 class="text-white font-semibold text-sm">Emmanuel Abraquah</h4>
+                            <p class="text-blue-300 text-xs">Full Stack Developer</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
