--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         }
     </style>
 </head>
-<body class="bg-gradient-to-b from-[#0066cc] to-[#003366] min-h-screen font-poppins">
+<body class="bg-gradient-to-b from-blue-700 to-blue-900 min-h-screen font-poppins" style="background: linear-gradient(to bottom, #0066cc, #003366) !important;">
     <!-- Navigation -->
     <nav class="p-6 lg:px-16 sticky top-0 z-50">
         <div class="container mx-auto px-6 lg:px-16 max-w-7xl">
