--- a/project.html
+++ b/project.html
@@ -129,7 +129,7 @@
         }
     </style>
 </head>
-<body class="bg-gradient-to-b from-[#0066cc] to-[#003366] min-h-screen font-poppins flex flex-col">
+<body class="bg-gradient-to-b from-blue-700 to-blue-900 min-h-screen font-poppins flex flex-col" style="background: linear-gradient(to bottom, #0066cc, #003366) !important;">
     <!-- Navigation -->
     <nav class="p-6 lg:px-16 sticky top-0 z-50" aria-label="Main Navigation" aria-label="Main Navigation">
         <div class="container mx-auto px-6 lg:px-16 max-w-7xl">
