--- a/project.html
+++ b/project.html
@@ -136,7 +136,7 @@
             <div class="flex justify-between items-center backdrop-blur-md bg-white/10 rounded-2xl p-0 shadow-lg">
                 <div class="flex items-center space-x-3">
                     <!-- Company Logo -->
-                    <img src="Logo.png" alt="LeadBryte Logo" class="h-20 w-auto" onerror="this.onerror=null;this.src='https://placehold.co/80x80?text=Logo';" loading="eager">
+                    <img src="Company Logo.png" alt="LeadBryte Logo" class="h-20 w-auto" onerror="this.onerror=null;this.src='https://placehold.co/80x80?text=Logo';" loading="eager">
                 </div>
                 <!-- Update the navigation links -->
                 <div class="hidden md:flex space-x-10">
@@ -270,17 +270,17 @@
                 </div>
 
                 <!-- Project Description -->
-                <div>d
-                    <label for="description" class="block text-sm font-medium text-white mb-2">Project Description</label>
-                    <textared
-                        id="dedn"
-                        name="description"
-                        rows="5"
-                        placeholder="Describe your project in detail, including your goals, current challenges, and any specific requirements."
-                        class="w-full px-4 py-3 rounded-lg border border-white/30 bg-white/10 text-white placeholder-gray-300 focus:ring-2 focus:ring-blue-300 focus:border-transparent transition duration-200 ease-in-out resize-y"
-                        required
-                    ></textarea>
-                </div>
+                <div>
+    <label for="description" class="block text-sm font-medium text-white mb-2">Project Description</label>
+    <textarea
+        id="description"
+        name="description"
+        rows="5"
+        placeholder="Describe your project in detail, including your goals, current challenges, and any specific requirements."
+        class="w-full px-4 py-3 rounded-lg border border-white/30 bg-white/10 text-white placeholder-gray-300 focus:ring-2 focus:ring-blue-300 focus:border-transparent transition duration-200 ease-in-out resize-y"
+        required
+    ></textarea>
+</div>
 
                 <!-- Budget Range -->
                 <div>
@@ -319,15 +319,14 @@
                 <div id="messageBox" class="hidden p-3 rounded-lg text-sm text-center" role="alert"></div>
 
                 <button
-                    type="submit"
-                    id="submitProjectButton""
-                    aria-label="Submit Project Request
-                    class="w-full bg-blue-600 text-white py-3 rounded-lg font-semibold text-lg hover:bg-blue-700 focus:outline-none focus:ring-4 focus:ring-blue-300 transition duration-300 ease-in-out transform hover:-translate-y-0.5"
-                    aria-label="Submit Project Request"
-                    disabled="true" <!-- Disabled until Firebase is initialized -->
-                >
-                    Submit Project Request
-                </button>
+    type="submit"
+    id="submitProjectButton"
+    class="w-full bg-blue-600 text-white py-3 rounded-lg font-semibold text-lg hover:bg-blue-700 focus:outline-none focus:ring-4 focus:ring-blue-300 transition duration-300 ease-in-out transform hover:-translate-y-0.5"
+    aria-label="Submit Project Request"
+    disabled
+>
+    Submit Project Request
+</button>
             </form>
 m" aria-label="Back to Hoe
             <div class="text-center mt-8">
