--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@
                     <div class="group">
                         <div class="backdrop-blur-md bg-white/10 rounded-2xl p-4 shadow-lg hover:shadow-xl transition-all duration-300">
                             <img src="caleb.jpg" alt="Team Member" class="w-full h-40 object-cover rounded-xl mb-4" onerror="this.onerror=null;this.src='https://placehold.co/160x160?text=Member+2';" loading="lazy">
-                            <h4 class="text-white font-semibold text-sm">Caleb A. Amarh</h4>
-                            <p class="text-blue-300 text-xs">Full Stack Developer</p>
+                            <h4 class="text-white font-semibold text-sm">Edward Forson</h4>
+                            <p class="text-blue-300 text-xs">Managing Director</p>
                         </div>
                     </div>
 
@@ -250,8 +250,8 @@
                     <div class="group">
                         <div class="backdrop-blur-md bg-white/10 rounded-2xl p-4 shadow-lg hover:shadow-xl transition-all duration-300">
                             <img src="forson.jpg" alt="Team Member" class="w-full h-40 object-cover rounded-xl mb-4" onerror="this.onerror=null;this.src='https://placehold.co/160x160?text=Member+4';" loading="lazy">
-                            <h4 class="text-white font-semibold text-sm">Edward Forson</h4>
-                            <p class="text-blue-300 text-xs">Managing Director</p>
+                            <h4 class="text-white font-semibold text-sm">Caleb A. Amarh</h4>
+                            <p class="text-blue-300 text-xs">Full Stack Developer/p>
                         </div>
                     </div>
 
@@ -442,7 +442,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-12">
                 <!-- Company Info -->
                 <div class="space-y-4">
-                    <img src="./image/Company Logo.png" alt="LeadBryte Logo" class="h-16 w-auto" onerror="this.onerror=null;this.src='https://placehold.co/64x64?text=Logo';" loading="lazy">
+                    <img src="Company Logo.png" alt="LeadBryte Logo" class="h-16 w-auto" onerror="this.onerror=null;this.src='https://placehold.co/64x64?text=Logo';" loading="lazy">
                     <p class="text-gray-300">Empowering businesses through innovative technology solutions and expert consulting.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="social-facebook text-white hover:text-teal-400 transition-colors">
