--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                     <!-- Team Member 3 -->
                     <div class="group">
                         <div class="backdrop-blur-md bg-white/10 rounded-2xl p-4 shadow-lg hover:shadow-xl transition-all duration-300">
-                            <img src="Stewart.JPG" alt="Team Member" class="w-full h-40 object-cover rounded-xl mb-4" onerror="this.onerror=null;this.src='https://placehold.co/160x160?text=Member+3';" loading="lazy">
+                            <img src="Stewart.jpg" alt="Team Member" class="w-full h-40 object-cover rounded-xl mb-4" onerror="this.onerror=null;this.src='https://placehold.co/160x160?text=Member+3';" loading="lazy">
                             <h4 class="text-white font-semibold text-sm">David A. R-Stewart</h4>
                             <p class="text-blue-300 text-xs">Data Analyst</p>
                         </div>
@@ -249,7 +249,7 @@
                     <!-- Team Member 4 -->
                     <div class="group">
                         <div class="backdrop-blur-md bg-white/10 rounded-2xl p-4 shadow-lg hover:shadow-xl transition-all duration-300">
-                            <img src="forson.jpg" alt="Team Member" class="w-full h-40 object-cover rounded-xl mb-4" onerror="this.onerror=null;this.src='https://placehold.co/160x160?text=Member+4';" loading="lazy">
+                            <img src="caleb.jpg" alt="Team Member" class="w-full h-40 object-cover rounded-xl mb-4" onerror="this.onerror=null;this.src='https://placehold.co/160x160?text=Member+4';" loading="lazy">
                             <h4 class="text-white font-semibold text-sm">Caleb A. Amarh</h4>
                             <p class="text-blue-300 text-xs">Full Stack Developer/p>
                         </div>
