--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                     <!-- Team Member 1 -->
                     <div class="group">
                         <div class="backdrop-blur-md bg-white/10 rounded-2xl p-4 shadow-lg hover:shadow-xl transition-all duration-300">
-                            <img src="Mr. Baffoe.jpg" class="w-full h-40 object-cover rounded-xl mb-4" onerror="this.onerror=null;this.src='https://placehold.co/160x160?text=Member+1';" loading="lazy">
+                            <img src="image/Mr.Baffoe.jpg" class="w-full h-40 object-cover rounded-xl mb-4" onerror="this.onerror=null;this.src='https://placehold.co/160x160?text=Member+1';" loading="lazy">
                             <h4 class="text-white font-semibold text-sm">Ebenezer S. Baffoe</h4>
                             <p class="text-blue-300 text-xs">CEO</p>
                         </div>
@@ -231,7 +231,7 @@
                     <!-- Team Member 2 -->
                     <div class="group">
                         <div class="backdrop-blur-md bg-white/10 rounded-2xl p-4 shadow-lg hover:shadow-xl transition-all duration-300">
-                            <img src="caleb.jpg" alt="Team Member" class="w-full h-40 object-cover rounded-xl mb-4" onerror="this.onerror=null;this.src='https://placehold.co/160x160?text=Member+2';" loading="lazy">
+                            <img src="forson.jpg" alt="Team Member" class="w-full h-40 object-cover rounded-xl mb-4" onerror="this.onerror=null;this.src='https://placehold.co/160x160?text=Member+2';" loading="lazy">
                             <h4 class="text-white font-semibold text-sm">Edward Forson</h4>
                             <p class="text-blue-300 text-xs">Managing Director</p>
                         </div>
@@ -240,7 +240,7 @@
                     <!-- Team Member 3 -->
                     <div class="group">
                         <div class="backdrop-blur-md bg-white/10 rounded-2xl p-4 shadow-lg hover:shadow-xl transition-all duration-300">
-                            <img src="Stewart.jpg" alt="Team Member" class="w-full h-40 object-cover rounded-xl mb-4" onerror="this.onerror=null;this.src='https://placehold.co/160x160?text=Member+3';" loading="lazy">
+                            <img src="image/Stewart.jpeg" alt="Team Member" class="w-full h-40 object-cover rounded-xl mb-4" onerror="this.onerror=null;this.src='https://placehold.co/160x160?text=Member+3';" loading="lazy">
                             <h4 class="text-white font-semibold text-sm">David A. R-Stewart</h4>
                             <p class="text-blue-300 text-xs">Data Analyst</p>
                         </div>
