--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
         </div>
     </div>
 
+
     <!-- Ratings Section -->
     <div class="container mx-auto px-6 lg:px-16 py-12 max-w-7xl">
         <div class="grid grid-cols-2 md:grid-cols-4 gap-8 backdrop-blur-md bg-white/5 rounded-2xl p-8 shadow-lg">
@@ -307,7 +308,7 @@
     </div>
 
     <!-- Portfolio Section -->
-    <div id="portfolio" class="container mx-auto px-6 lg:px-16 py-16 max-w-7xl">
+    <div id="portfolio" class="container x-auto px-6 lg:px-16 py-16 max-w-7xl">
         <div class="text-center mb-12">
             <h2 class="text-3xl font-bold text-white mb-4">Our Portfolio</h2>
             <p class="text-gray-200 max-w-2xl mx-auto">Take a look at some of our successful projects and implementations.</p>
