--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                     <!-- Team Member 3 -->
                     <div class="group">
                         <div class="backdrop-blur-md bg-white/10 rounded-2xl p-4 shadow-lg hover:shadow-xl transition-all duration-300">
-                            <img src="image/Stewart.jpeg" alt="Team Member" class="w-full h-40 object-cover rounded-xl mb-4" onerror="this.onerror=null;this.src='https://placehold.co/160x160?text=Member+3';" loading="lazy">
+                            <img src="image/Steward.png" alt="Team Member" class="w-full h-40 object-cover rounded-xl mb-4" onerror="this.onerror=null;this.src='https://placehold.co/160x160?text=Member+3';" loading="lazy">
                             <h4 class="text-white font-semibold text-sm">David A. R-Stewart</h4>
                             <p class="text-blue-300 text-xs">Data Analyst</p>
                         </div>
@@ -250,7 +250,7 @@
                     <!-- Team Member 4 -->
                     <div class="group">
                         <div class="backdrop-blur-md bg-white/10 rounded-2xl p-4 shadow-lg hover:shadow-xl transition-all duration-300">
-                            <img src="caleb.jpg" alt="Team Member" class="w-full h-40 object-cover rounded-xl mb-4" onerror="this.onerror=null;this.src='https://placehold.co/160x160?text=Member+4';" loading="lazy">
+                            <img src="caleb.png" alt="Team Member" class="w-full h-40 object-cover rounded-xl mb-4" onerror="this.onerror=null;this.src='https://placehold.co/160x160?text=Member+4';" loading="lazy">
                             <h4 class="text-white font-semibold text-sm">Caleb A. Amarh</h4>
                             <p class="text-blue-300 text-xs">Full Stack Developer/p>
                         </div>
@@ -259,8 +259,20 @@
                     <!-- Team Member 5 -->
                     <div class="group">
                         <div class="backdrop-blur-md bg-white/10 rounded-2xl p-4 shadow-lg hover:shadow-xl transition-all duration-300">
-                            <img src="image/Abruquah.jpg" alt="Emmanuel Abraquah" class="w-full h-40 object-cover rounded-xl mb-4" onerror="this.onerror=null;this.src='https://placehold.co/160x160?text=Member+5';" loading="lazy">
+                            <img src="image/Abraquah.png" alt="Emmanuel Abraquah" class="w-full h-40 object-cover rounded-xl mb-4" onerror="this.onerror=null;this.src='https://placehold.co/160x160?text=Member+5';" loading="lazy">
                             <h4 class="text-white font-semibold text-sm">Emmanuel Abraquah</h4>
+                            <p class="text-blue-300 text-xs">Full Stack Developer</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Team Member 6 -->
+                    <div class="group">
+                        <div class="backdrop-blur-md bg-white/10 rounded-2xl p-4 shadow-lg hover:shadow-xl transition-all duration-300">
+                            <img src="image/Alhassan.png" alt="Alhassan Ben Salifuass="w-full h-40 object-cover rounded-xl mb-4" onerror="this.onerror=null;this.src='https://placehold.co/160x160?text=Member+5';" loading="lazy">
+                            <h4 class="text-white font-semibold text-sm">Alhassan Ben Salifu</h4>
                             <p class="text-blue-300 text-xs">Full Stack Developer</p>
                         </div>
                     </div>
