--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
             <div class="hidden md:block md:w-1/2 relative">
                 <div class="slider-container relative w-full max-w-2xl mx-auto">
                     <div class="slider-wrapper">
-                        <img src="network servers.jpg" alt="Innovation" class="slider-image" loading="lazy">
-                        <img src="server room.jpg" alt="Excellence" class="slider-image" loading="lazy">
-                        <img src="team.jpg" alt="Technology" class="slider-image" loading="lazy">
+                        <img src="image/Abraquah.png" alt="Innovation" class="slider-image" loading="lazy">
+                        <img src="image/Steward.png" alt="Excellence" class="slider-image" loading="lazy">
+                        <img src="caleb.png" alt="Technology" class="slider-image" loading="lazy">
                     </div>
                     <button class="prev-btn slider-btn absolute left-4 top-1/2 transform -translate-y-1/2 text-white rounded-full w-10 h-10 flex items-center justify-center">
                         <i class="fas fa-chevron-left"></i>
@@ -318,7 +318,7 @@
     </div>
 
     <!-- Portfolio Section -->
-    <div id="portfolio" class="container x-auto px-6 lg:px-16 py-16 max-w-7xl">
+    <div id="portfolio" class="container mx-auto px-6 lg:px-16 py-16 max-w-7xl">
         <div class="text-center mb-12">
             <h2 class="text-3xl font-bold text-white mb-4">Our Portfolio</h2>
             <p class="text-gray-200 max-w-2xl mx-auto">Take a look at some of our successful projects and implementations.</p>
@@ -327,42 +327,54 @@
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
             <!-- Portfolio Item 1 -->
             <div class="backdrop-blur-md bg-white/10 rounded-2xl p-4 shadow-lg group hover:scale-105 transition-transform duration-300">
-                <img src="network-switch-with-cables.jpg" alt="Project 1" class="w-full h-48 object-cover rounded-lg mb-4" onerror="this.onerror=null;this.src='https://placehold.co/300x200?text=Project+1';" loading="lazy">
+                <div class="h-48 overflow-hidden rounded-lg mb-4">
+                    <img src="network-switch-with-cables.jpg" alt="Project 1" class="w-full h-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/300x200?text=Project+1';" loading="lazy">
+                </div>
                 <h3 class="text-xl font-bold text-white mb-2">Network Infrastructure Setup</h3>
                 <p class="text-gray-200">Complete network infrastructure implementation for a large corporate office.</p>
             </div>
 
             <!-- Portfolio Item 2 -->
             <div class="backdrop-blur-md bg-white/10 rounded-2xl p-4 shadow-lg group hover:scale-105 transition-transform duration-300">
-                <img src="Security System Installation.jpg" alt="Project 2" class="w-full h-48 object-cover rounded-lg mb-4" onerror="this.onerror=null;this.src='https://placehold.co/300x200?text=Project+2';" loading="lazy">
+                <div class="h-48 overflow-hidden rounded-lg mb-4">
+                    <img src="Security System Installation.jpg" alt="Project 2" class="w-full h-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/300x200?text=Project+2';" loading="lazy">
+                </div>
                 <h3 class="text-xl font-bold text-white mb-2">Security System Installation</h3>
                 <p class="text-gray-200">Advanced CCTV and security system deployment for a retail chain.</p>
             </div>
 
             <!-- Portfolio Item 3 -->
             <div class="backdrop-blur-md bg-white/10 rounded-2xl p-4 shadow-lg group hover:scale-105 transition-transform duration-300">
-                <img src="SOFTWARE DEVELOPMENT.jpg" alt="Project 3" class="w-full h-48 object-cover rounded-lg mb-4" onerror="this.onerror=null;this.src='https://placehold.co/300x200?text=Project+3';" loading="lazy">
+                <div class="h-48 overflow-hidden rounded-lg mb-4">
+                    <img src="SOFTWARE DEVELOPMENT.jpg" alt="Project 3" class="w-full h-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/300x200?text=Project+3';" loading="lazy">
+                </div>
                 <h3 class="text-xl font-bold text-white mb-2">Software Development</h3>
                 <p class="text-gray-200">Custom ERP solution development for manufacturing company.</p>
             </div>
 
             <!-- Portfolio Item 4 -->
             <div class="backdrop-blur-md bg-white/10 rounded-2xl p-4 shadow-lg group hover:scale-105 transition-transform duration-300">
-                <img src="server room.jpg" alt="Project 4" class="w-full h-48 object-cover rounded-lg mb-4" onerror="this.onerror=null;this.src='https://placehold.co/300x200?text=Project+4';" loading="lazy">
+                <div class="h-48 overflow-hidden rounded-lg mb-4">
+                    <img src="server room.jpg" alt="Project 4" class="w-full h-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/300x200?text=Project+4';" loading="lazy">
+                </div>
                 <h3 class="text-xl font-bold text-white mb-2">Data Center Setup</h3>
                 <p class="text-gray-200">Modern data center design and implementation for financial institution.</p>
             </div>
 
             <!-- Portfolio Item 5 -->
             <div class="backdrop-blur-md bg-white/10 rounded-2xl p-4 shadow-lg group hover:scale-105 transition-transform duration-300">
-                <img src="CLOUD MIGRATION.jpg" alt="Project 5" class="w-full h-48 object-cover rounded-lg mb-4" onerror="this.onerror=null;this.src='https://placehold.co/300x200?text=Project+5';" loading="lazy">
+                <div class="h-48 overflow-hidden rounded-lg mb-4">
+                    <img src="CLOUD MIGRATION.jpg" alt="Project 5" class="w-full h-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/300x200?text=Project+5';" loading="lazy">
+                </div>
                 <h3 class="text-xl font-bold text-white mb-2">Cloud Migration</h3>
                 <p class="text-gray-200">Successful cloud migration project for government agency.</p>
             </div>
 
             <!-- Portfolio Item 6 -->
             <div class="backdrop-blur-md bg-white/10 rounded-2xl p-4 shadow-lg group hover:scale-105 transition-transform duration-300">
-                <img src="IT CONSULT.jpg" alt="Project 6" class="w-full h-48 object-cover rounded-lg mb-4" onerror="this.onerror=null;this.src='https://placehold.co/300x200?text=Project+6';" loading="lazy">
+                <div class="h-48 overflow-hidden rounded-lg mb-4">
+                    <img src="IT CONSULT.jpg" alt="Project 6" class="w-full h-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/300x200?text=Project+6';" loading="lazy">
+                </div>
                 <h3 class="text-xl font-bold text-white mb-2">IT Consulting</h3>
                 <p class="text-gray-200">Strategic IT consulting and digital transformation for healthcare provider.</p>
             </div>
