--- a/index.html
+++ b/index.html
@@ -266,12 +266,12 @@
                         </div>
                     </div>
                     
-                    <!-- Team Member 6: Updated to Alhassan Ben Salifu -->
+                    <!-- Team Member 6:  -->
                     <div class="group">
                         <div class="backdrop-blur-md bg-white/10 rounded-2xl p-4 shadow-lg hover:shadow-xl transition-all duration-300">
                             <img src="image/Alhassan.png" alt="Alhassan Ben Salifu" class="w-full h-40 object-cover rounded-xl mb-4" onerror="this.onerror=null;this.src='https://placehold.co/160x160?text=Member+6';" loading="lazy">
                             <h4 class="text-white font-semibold text-sm">Alhassan Ben Salifu</h4>
-                            <p class="text-blue-300 text-xs">Project Manager</p>
+                            <p class="text-blue-300 text-xs">Hardware Manager</p>
                         </div>
                     </div>
                 </div>
@@ -337,7 +337,7 @@
             <!-- Portfolio Item 2 -->
             <div class="backdrop-blur-md bg-white/10 rounded-2xl p-4 shadow-lg group hover:scale-105 transition-transform duration-300">
                 <div class="h-48 overflow-hidden rounded-lg mb-4">
-                    <img src="Security System Installation.jpg" alt="Project 2" class="w-full h-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/300x200?text=Project+2';" loading="lazy">
+                    <img src="image/cctv instalation.jpg" alt="Project 2" class="w-full h-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/300x200?text=Project+2';" loading="lazy">
                 </div>
                 <h3 class="text-xl font-bold text-white mb-2">Security System Installation</h3>
                 <p class="text-gray-200">Advanced CCTV and security system deployment for a retail chain.</p>
