--- a/project.html
+++ b/project.html
@@ -205,7 +205,7 @@
                             type="text"
                             id="fullName"
                             name="fullName"
-                            placeholder="John Doe"
+                            placeholder="Enter you fullname"
                             class="w-full px-4 py-3 rounded-lg border border-white/30 bg-white/10 text-white placeholder-gray-300 focus:ring-2 focus:ring-blue-300 focus:border-transparent transition duration-200 ease-in-out"
                             required
                         >
@@ -218,7 +218,7 @@
                             type="email"
                             id="email"
                             name="email"
-                            placeholder="you@example.com"
+                            placeholder="Enter your email"
                             class="w-full px-4 py-3 rounded-lg border border-white/30 bg-white/10 text-white placeholder-gray-300 focus:ring-2 focus:ring-blue-300 focus:border-transparent transition duration-200 ease-in-out"
                             required
                         >
@@ -231,7 +231,7 @@
                             type="tel"
                             id="phone"
                             name="phone"
-                            placeholder="+1234567890"
+                            placeholder="Emter your phone number"
                             class="w-full px-4 py-3 rounded-lg border border-white/30 bg-white/10 text-white placeholder-gray-300 focus:ring-2 focus:ring-blue-300 focus:border-transparent transition duration-200 ease-in-out"
                         >
                     </div>
@@ -243,7 +243,7 @@
                             type="text"
                             id="company"
                             name="company"
-                            placeholder="Acme Corp"
+                            placeholder="Enter Company Name"
                             class="w-full px-4 py-3 rounded-lg border border-white/30 bg-white/10 text-white placeholder-gray-300 focus:ring-2 focus:ring-blue-300 focus:border-transparent transition duration-200 ease-in-out"
                         >
                     </div>
