--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <script src="dateUpdate.min.js"></script>
     <script src="https://cdn.tailwindcss.com" defer></script>
     <script type="module" src="js/config.min.js"></script>
-<script type="module">
+    <script type="module">
   import { config } from './js/config.min.js';
   document.addEventListener('DOMContentLoaded', async () => {
     await config.init();
@@ -49,7 +49,6 @@
     window.WHATSAPP_NUMBER = config.get('WHATSAPP_NUMBER');
   });
 </script>
-    </script>
     <script>
         tailwind.config = {
             theme: {
@@ -104,7 +103,9 @@
         <div class="container mx-auto px-6 lg:px-16 max-w-7xl">
             <div class="flex justify-between items-center backdrop-blur-md bg-white/10 rounded-2xl p-0 shadow-lg">
                 <div class="flex items-center space-x-3">
-                    <img src="Company Logo.png" alt="LeadBryte Logo" class="h-20 w-auto" onerror="this.onerror=null;this.src='https://placehold.co/80x80?text=Logo';" loading="eager">
+                    <a href="index.html" aria-label="Go to homepage">
+                        <img src="Company Logo.png" alt="LeadBryte Logo" class="h-20 w-auto" onerror="this.onerror=null;this.src='https://placehold.co/80x80?text=Logo';" loading="eager">
+                    </a>
                 </div>
                 <div class="hidden md:flex space-x-10">
                     <a href="#what-we-do" class="text-white hover:text-teal-200 transition-colors font-bold p-4" aria-label="What we do">What we do</a>
@@ -133,7 +134,6 @@
             <a href="#faqs" class="text-white text-2xl font-bold" onclick="closeMobileMenu()">FAQs</a>
             <a href="project.html" class="text-white text-2xl font-bold" onclick="closeMobileMenu()">Start a Project</a>
           </nav>
-        </div>
         </div>
     </nav>
 
