--- a/project.html
+++ b/project.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title id="site-title">LeadBryteSolutions</title>
+    <link rel="icon" type="image/png" href="logo.jpg">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <!-- Tailwind CSS CDN -->
@@ -136,12 +137,14 @@
 </head>
 <body class="bg-gradient-to-b from-blue-700 to-blue-900 min-h-screen font-poppins flex flex-col" style="background: linear-gradient(to bottom, #0066cc, #003366) !important;">
     <!-- Navigation -->
-    <nav class="p-6 lg:px-16 sticky top-0 z-50" aria-label="Main Navigation" aria-label="Main Navigation">
+    <nav class="p-6 lg:px-16 sticky top-0 z-50" aria-label="Main Navigation">
         <div class="container mx-auto px-6 lg:px-16 max-w-7xl">
             <div class="flex justify-between items-center backdrop-blur-md bg-white/10 rounded-2xl p-0 shadow-lg">
                 <div class="flex items-center space-x-3">
                     <!-- Company Logo -->
-                    <img src="Company Logo.png" alt="LeadBryte Logo" class="h-20 w-auto" onerror="this.onerror=null;this.src='https://placehold.co/80x80?text=Logo';" loading="eager">
+                    <a href="index.html" aria-label="Go to homepage">
+                        <img src="Company Logo.png" alt="LeadBryte Logo" class="h-20 w-auto" onerror="this.onerror=null;this.src='https://placehold.co/80x80?text=Logo';" loading="eager">
+                    </a>
                 </div>
                 <!-- Update the navigation links -->
                 <div class="hidden md:flex space-x-10">
@@ -171,7 +174,6 @@
             <a href="index.html#faqs" class="text-white text-2xl font-bold" onclick="closeMobileMenu()">FAQs</a>
             <a href="project.html" class="text-white text-2xl font-bold" onclick="closeMobileMenu()">Start a Project</a>
           </nav>
-        </div>
         </div>
     </nav>
 
@@ -205,7 +207,7 @@
                             type="text"
                             id="fullName"
                             name="fullName"
-                            placeholder="Enter you fullname"
+                            placeholder="Enter your full name"
                             class="w-full px-4 py-3 rounded-lg border border-white/30 bg-white/10 text-white placeholder-gray-300 focus:ring-2 focus:ring-blue-300 focus:border-transparent transition duration-200 ease-in-out"
                             required
                         >
@@ -231,7 +233,7 @@
                             type="tel"
                             id="phone"
                             name="phone"
-                            placeholder="Emter your phone number"
+                            placeholder="Enter your phone number"
                             class="w-full px-4 py-3 rounded-lg border border-white/30 bg-white/10 text-white placeholder-gray-300 focus:ring-2 focus:ring-blue-300 focus:border-transparent transition duration-200 ease-in-out"
                         >
                     </div>
@@ -339,78 +341,6 @@
     </main>
 
     <script>
-        const projectForm = document.getElementById('projectForm');
-        const submitProjectButton = document.getElementById('submitProjectButton');
-        const messageBox = document.getElementById('messageBox');
-
-        /**
-         * Displays a message in the message box.
-         * @param {string} message - The message to display.
-         * @param {string} type - The type of message ('success' or 'error').
-         */
-        function showMessage(message, type) {
-            messageBox.textContent = message;
-            messageBox.classList.remove('hidden', 'bg-green-100', 'text-green-800', 'bg-red-100', 'text-red-800', 'bg-white/20', 'text-white'); // Remove previous styles
-            if (type === 'success') {
-                messageBox.classList.add('bg-green-100', 'text-green-800');
-            } else if (type === 'error') {
-                messageBox.classList.add('bg-red-100', 'text-red-800');
-            }
-            messageBox.classList.remove('hidden');
-        }
-
-        /**
-         * Hides the message box.
-         */
-        function hideMessageBox() {
-            messageBox.classList.add('hidden');
-            messageBox.textContent = '';
-        }
-
-        projectForm.addEventListener('submit', async (event) => {
-            event.preventDefault();
-            hideMessageBox();
-
-            // Get form data
-            const formData = {
-                fullName: document.getElementById('fullName').value,
-                email: document.getElementById('email').value,
-                phone: document.getElementById('phone').value,
-                company: document.getElementById('company').value,
-                projectType: document.getElementById('projectType').value,
-                description: document.getElementById('description').value,
-                budget: document.getElementById('budget').value,
-                contactMethod: document.querySelector('input[name="contactMethod"]:checked').value,
-                createdAt: new Date().toISOString()
-            };
-
-            // Client-side validation
-            if (!formData.fullName || !formData.email || !formData.projectType || !formData.description) {
-                showMessage('Please fill in all required fields (Full Name, Email, Project Type, Project Description).', 'error');
-                return;
-            }
-
-            // Update button state
-            submitProjectButton.textContent = 'Submitting...';
-            submitProjectButton.disabled = true;
-            submitProjectButton.classList.add('opacity-75', 'cursor-not-allowed');
-
-            try {
-                // Store data in Firestore
-                await addDoc(collection(db, 'project_requests'), formData);
-
-                showMessage('Project request submitted successfully! We will contact you soon.', 'success');
-                projectForm.reset();
-            } catch (error) {
-                console.error('Error submitting project request:', error);
-                showMessage('Failed to submit project request. Please try again later.', 'error');
-            } finally {
-                submitProjectButton.textContent = 'Submit Project Request';
-                submitProjectButton.disabled = false;
-                submitProjectButton.classList.remove('opacity-75', 'cursor-not-allowed');
-            }
-        });
-
         // Live chat widget (Tawk.to placeholder)
         // To activate: create a Tawk.to account, get your property ID, and
         // replace YOUR_PROPERTY_ID/DEFAULT below with the real values.
