--- a/index.html
+++ b/index.html
@@ -730,19 +730,17 @@
         //     document.body.appendChild(div);
         // };
     </script>
-    <script>
-        // Live chat widget (Tawk.to placeholder)
-        // To activate: create a Tawk.to account, get your property ID, and
-        // replace YOUR_PROPERTY_ID/DEFAULT below with the real values.
-        var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+    <script type="text/javascript">
+        // Live chat widget (Crisp-style placeholder)
+        // TODO: Replace YOUR_WEBSITE_ID with your real Crisp website ID.
+        window.$crisp = [];
+        window.CRISP_WEBSITE_ID = "YOUR_WEBSITE_ID";
         (function() {
-            var s1 = document.createElement('script');
-            var s0 = document.getElementsByTagName('script')[0];
-            s1.async = true;
-            s1.src = 'https://embed.tawk.to/YOUR_PROPERTY_ID/DEFAULT';
-            s1.charset = 'UTF-8';
-            s1.setAttribute('crossorigin', '*');
-            s0.parentNode.insertBefore(s1, s0);
+            const d = document;
+            const s = d.createElement("script");
+            s.src = "https://client.crisp.chat/l.js";
+            s.async = 1;
+            d.getElementsByTagName("head")[0].appendChild(s);
         })();
     </script>
     <script>
