--- a/project.html
+++ b/project.html
@@ -341,10 +341,9 @@
     </main>
 
     <script type="text/javascript">
-        // Live chat widget (Crisp-style placeholder)
-        // TODO: Replace YOUR_WEBSITE_ID with your real Crisp website ID.
+        // Live chat widget (Crisp)
         window.$crisp = [];
-        window.CRISP_WEBSITE_ID = "YOUR_WEBSITE_ID";
+        window.CRISP_WEBSITE_ID = "64e53434-cad0-4f72-badd-612c93b2cb29";
         (function() {
             const d = document;
             const s = d.createElement("script");
