--- a/index.html
+++ b/index.html
@@ -1,29 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-    <script type="module">
-        // Import Firebase SDK and functions
-        import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js';
-        import { getFirestore } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js';
-        import { subscribeToNewsletter } from './js/firebase-config.js';
-
-        // Initialize Firebase
-        const firebaseConfig = {
-            apiKey: "AIzaSyAmcJb5bSPGfBrcuexuPRiv37GIqpzHmLQ",
-            authDomain: "leadbryte-solutions-website.firebaseapp.com",
-            projectId: "leadbryte-solutions-website",
-            storageBucket: "leadbryte-solutions-website.firebasestorage.app",
-            messagingSenderId: "418567681709",
-            appId: "1:418567681709:web:991fd66c8ef646e1d53824",
-            measurementId: "G-KP9278VC0D"
-        };
-
-        // Initialize Firebase
-        const app = initializeApp(firebaseConfig);
-        const db = getFirestore(app);
-
-        // Make subscribeToNewsletter function available globally
-        window.subscribeToNewsletter = subscribeToNewsletter;
-    </script>
+<!DOCTYPE html><html lang="en">
+<script type="module">import{initializeApp as a}from'https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js';import{getFirestore as b}from'https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js';import{subscribeToNewsletter as c}from'./js/firebase-config.js';const d={apiKey:"AIzaSyAmcJb5bSPGfBrcuexuPRiv37GIqpzHmLQ",authDomain:"leadbryte-solutions-website.firebaseapp.com",projectId:"leadbryte-solutions-website",storageBucket:"leadbryte-solutions-website.firebasestorage.app",messagingSenderId:"418567681709",appId:"1:418567681709:web:991fd66c8ef646e1d53824",measurementId:"G-KP9278VC0D"};const e=a(d),f=b(e);window.subscribeToNewsletter=c;</script>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
